[gd_scene load_steps=9 format=3 uid="uid://boa8r0y883kop"]

[ext_resource type="Script" path="res://Scripts/breaking_pltm.gd" id="1_cpgtc"]
[ext_resource type="Texture2D" uid="uid://dg5d84sjqy2fm" path="res://Sprites/Tiles/breakingplatform1.png" id="2_1evtg"]

[sub_resource type="Animation" id="Animation_t7d0c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_b3lvh"]
resource_name = "destroyed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_8xnid"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j1ihr"]
_data = {
"RESET": SubResource("Animation_t7d0c"),
"destroyed": SubResource("Animation_b3lvh"),
"idle": SubResource("Animation_8xnid")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2wny"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5m7fr"]
size = Vector2(32, 1)

[node name="breaking_pltm" type="StaticBody2D"]
script = ExtResource("1_cpgtc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_1evtg")
hframes = 4
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j1ihr")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_a2wny")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_5m7fr")

[node name="Timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
